[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/test.gd" type="Script" id=1]
[ext_resource path="res://sprites/Base/fundo preto.png" type="Texture" id=2]
[ext_resource path="res://sprites/Base/modelo_canvas.png" type="Texture" id=3]
[ext_resource path="res://sprites/Base/button_home_normal.png" type="Texture" id=4]
[ext_resource path="res://sprites/Base/button_home_pressed.png" type="Texture" id=5]
[ext_resource path="res://songs/Jewel-Thieves_Looping.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/comfortaa/Comfortaa-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/letter-gothic-std/LetterGothicStd.otf"

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/letter-gothic-std/LetterGothicStd.otf"

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = SubResource( 5 )

[node name="test" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo2" type="Node2D" parent="."]

[node name="fundo" type="Sprite" parent="fundo2"]
position = Vector2( 298.963, 511.076 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="fundo2"]
position = Vector2( 301.011, 289.514 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 25.6759
margin_top = 507.244
margin_right = 567.676
margin_bottom = 680.244
custom_fonts/font = SubResource( 2 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ullamcorper eu metus vitae congue. Quisque maximus venenatis congue. Vivamus ac velit vel orci convallis vulputate tristique id turpis. Curabitur consequat, lacus ."
align = 1
valign = 1
autowrap = true

[node name="info" type="Node2D" parent="."]
position = Vector2( -1.29236, -14.2159 )

[node name="semana" type="Label" parent="info"]
margin_left = 49.9526
margin_top = 29.9002
margin_right = 217.953
margin_bottom = 65.9006
custom_fonts/font = SubResource( 4 )
text = "Semana 1"

[node name="doentes" type="Label" parent="info"]
margin_left = 290.842
margin_top = 41.2067
margin_right = 545.842
margin_bottom = 67.2067
custom_fonts/font = SubResource( 6 )
text = "000000000"
align = 2

[node name="doentes_label" type="Label" parent="info"]
margin_left = 148.247
margin_top = 39.4017
margin_right = 403.247
margin_bottom = 65.4017
custom_fonts/font = SubResource( 6 )
text = "Doentes: "
align = 2

[node name="obitos" type="Label" parent="info"]
margin_left = 351.88
margin_top = 71.0
margin_right = 544.88
margin_bottom = 97.0
custom_fonts/font = SubResource( 6 )
text = "000000000"
align = 2

[node name="obitos_label" type="Label" parent="info"]
margin_left = 193.04
margin_top = 69.2925
margin_right = 386.04
margin_bottom = 95.2925
custom_fonts/font = SubResource( 6 )
text = "Ã“bitos:"
align = 2

[node name="respostas" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="home" type="Node2D" parent="."]

[node name="TouchScreenButton" type="TouchScreenButton" parent="home"]
position = Vector2( 11.1037, 55.5185 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
autoplay = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="released" from="home/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
